examples/writeEOF/main.cpp
# include <stdlib.h>
# include <string>
# include <map>
# include <list>
# include <vector>
# include <unistd.h>
# include <fcntl.h>
# include <iostream>
# include <arpa/inet.h>
# include <sys/socket.h>
# include <sys/time.h>
# include <sys/select.h>
# include <errno.h>
# include <sys/stat.h>
# include <dirent.h>
# include <signal.h>

//error
#include <string.h>
#include <errno.h>

